--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ a.out
 *.so
 *.a
 *.o
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
